{
    "name": "GameControls",
    "maps": [
        {
            "name": "Game",
            "id": "7b39d943-f1c7-4e77-86d9-1468fd686997",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "d561b20b-0850-444b-ac29-1ce04dd7df92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6f9150c-34c4-467d-92d2-1e731a73063d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}